--- a/main_app/templates/eat.html
+++ b/main_app/templates/eat.html
@@ -15,7 +15,9 @@
     <header>
         <button><a href="/home">Home</a></button>
         <h1>Welcome {{ user.first_name }}</h1>
-        <span><button><a href="/logout">Logout</a></button></span>        
+        <span>
+            <button><a href="/logout">Logout</a></button>
+        </span>        
     </header>
 
     <div class="addSection">
@@ -26,32 +28,32 @@
 
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="time">How much time do you have?</label>
-                    <div>
-                        <input class="form-control" placeholder="(Minutes)" type="number" name="time" step='15' min="0">
-                    </div>
+                    <input class="form-control" placeholder="(Minutes)" type="number" name="time" step='15' min="0">
                 </div>
 
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a category</label>
-                    <div>
-                        <select required class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Category</option><!-- ie ethnicity -->
-                            <option value="Mexican">Mexican</option>
-                            <option value="Brazilian">Brazilian</option>
-                            <option value="Italian">Italian</option>
-                            <option value="Indian">Indian</option>
-                            <option value="Middle Eastern">Middle Eastern</option>
-                        </select>
-                    </div>
+                    <select required class="form-control" type="text" name="category">
+                        <option class="form-control" disabled selected value="">Category</option><!-- ie ethnicity -->
+                        <option value="Mexican">Mexican</option>
+                        <option value="Brazilian">Brazilian</option>
+                        <option value="Italian">Italian</option>
+                        <option value="Indian">Indian</option>
+                        <option value="Middle Eastern">Middle Eastern</option>
+                    </select>
                 </div>
 
                 <fieldset class="form-group">
                     <div id="ingredients" class="row"> 
-                        <legend class="col-form-label col-sm-3 pt-0"> Ingredients: <span class="add">+ </span></legend>
+                        <legend class="col-form-label col-sm-3 pt-0"> 
+                            Ingredients: 
+                            <span class="add">+ </span>
+                        </legend>
                         <div class="col-sm-4">
-                                <div class="ingredient" id="div_1">
-                                    <input id="addItem" class="form-control" type="text" name="ingredient"><br>
-                                </div>
+                            <div class="ingredient" id="div_1">
+                                <input id="addItem" class="form-control" type="text" name="ingredient">
+                                <br>
+                            </div>
                         </div>        
                     </div>
                 </fieldset>
